Aggiunta fragment coi js di bootstrap

--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -50,5 +50,6 @@
 		<a th:href="@{/register}"><strong>Registrati</strong></a>
 	</div>
 	<footer th:replace="fragments/layout.html :: footer"></footer>
+	<div th:replace="fragments/layout.html :: jsFiles"></div>
 </body>
 </html>
