--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -71,6 +71,6 @@
 	</div>
 
 	<footer th:replace="fragments/layout.html :: footer"></footer>
-
+	<div th:replace="fragments/layout.html :: jsFiles"></div>
 </body>
 </html>
