--- a/src/main/resources/templates/spettacoli.html
+++ b/src/main/resources/templates/spettacoli.html
@@ -38,5 +38,6 @@
 		</ul>
 	</div>
 	<footer th:replace="fragments/layout.html :: footer"></footer>
+	<div th:replace="fragments/layout.html :: jsFiles"></div>
 </body>
 </html>
