--- a/src/main/resources/templates/films.html
+++ b/src/main/resources/templates/films.html
@@ -31,7 +31,7 @@
 					</a>
 				</div>
 				<div class="azione" th:if="${amministratoreLoggato}">
-					<form th:action="@{'/film/deleteForm' + '/' +${film.id}}" method="post">
+					<form th:action="@{'/film/deleteForm' + '/' +${film.id}}" method="get">
 						<button class="btn btn-primary our-button" type="submit">Elimina</button>
 					</form>
 				</div>
