Modifica spettacoloForm grafica

--- a/src/main/resources/templates/filmForm.html
+++ b/src/main/resources/templates/filmForm.html
@@ -55,7 +55,7 @@
 						th:errors="*{regista}"></span>
 					</div>
 					<div>
-					<button class="btn btn-primary our-button" type="submit">Registrati</button>
+					<button class="btn btn-primary our-button" type="submit">Aggiungi</button>
 					</div>
 				</div>				
 		</form>
