introdotta la pagina chi siamo
forse diventerà dove siamo

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -25,7 +25,7 @@
 			<a href="/spettacolo/all"><strong> PROGRAMMAZIONE </strong></a>
 		</div>
 		<div>
-			<a href=""><strong>CHI SIAMO</strong></a>
+			<a href="/info"><strong>CHI SIAMO</strong></a>
 		</div>
 		<div th:if="${userLoggato}">
 			<a th:href="@{/user/prenota}"><strong>PRENOTAZIONI</strong></a>
