Rimozione bug spettacoli

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,12 +29,12 @@
 			tua disposizione</div>
 
 		<p class="homepage-paragraph">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sit
-			amet tristique ex. Orci varius natoque penatibus et magnis dis
-			parturient montes, nascetur ridiculus mus. Vestibulum ante ipsum <b>primis
-				in faucibus orci</b> luctus et ultrices posuere cubilia curae; Nunc
-			porttitor, turpis sed lobortis ultricies, tellus ante gravida leo,
-			sit amet gravida elit nulla id eros.
+			Benvenuto sul sito del <b>Cinema SIW</b>. La nostra priorità, nel corso
+			degli anni, è sempre stata quella di fornire al nostro pubblico un'offerta
+			di film allo stesso tempo ricca e selezionata, popolare ma ricercata, in
+			modo da soddisfare i gusti di una platea sempre più vasta e diversificata.
+			Questo perché riteniamo che l'esperienza del cinema debba essere s&igrave;
+			<b>un'esperienza artistica, ma allo stesso tempo accessibile al grande pubblico.</b>
 		</p>
 
 		<p class="homepage-paragraph">
