--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -46,7 +46,7 @@
 		<div>
 			<strong>Cinema Siw</strong>
 		</div>
-		<div>Via della Vasca Navale, 79 - 00146 - Roma</div>
+		<div>Via Argentina, 19 - 00123 - Roma</div>
 		<div>
 			<a href="tel:+39 3210456789">Tel. +39 3210456789</a>
 		</div>
