--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -14,9 +14,6 @@
 <link rel="stylesheet" href="/footer.css"></link>
 <!-- a qui, copiare in ogni html -->
 <title>DOVE SIAMO</title>
-<link rel="stylesheet" href="/film.css"></link>
-<link rel="stylesheet" href="/noImageBar.css"></link>
-<link rel="stylesheet" href="/footer.css"></link>
 <link rel="stylesheet" href="/info.css"></link>
 </head>
 <body
@@ -24,7 +21,7 @@
 	<header th:replace="fragments/layout.html :: navbar"></header>
 	<div class="space-container">
 		<div>
-			<h1 class="titolo">Dove siamo?</h1>
+			<h1 class="titolo title">Dove siamo?</h1>
 			<br>
 			<p>
 				<span class="paragrafo">Ci trovi in Via Argentina, 30, 00197
@@ -112,9 +109,6 @@
 		</div>
 	</section>
 	<div th:replace="fragments/layout.html :: jsFiles"></div>
-	<div class="bottone">
-		<a class="btn btn-info btn-sm twtr" href="/default" target="_b">Back</a>
-	</div>
 	<br>
 	<footer th:replace="fragments/layout.html :: footer"></footer>
 </body>
