Tolto il lorem ipsum dalla homepage

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,18 +38,17 @@
 		</p>
 
 		<p class="homepage-paragraph">
-			Cras pellentesque ac mi elementum malesuada. Proin urna tortor,
-			gravida non consequat non, lobortis nec quam. Cras auctor nisl ut
-			luctus vehicula. Nam accumsan scelerisque libero, nec porta odio
-			porta ut. In et imperdiet lectus. <b>Duis a fringilla sapien.</b>
-			Vivamus consectetur mi sit amet elit congue, id venenatis odio
-			commodo. Fusce ac mattis magna, nec ultricies quam. Mauris id turpis
-			pharetra, mattis magna eu, sagittis ex. Morbi ut lectus erat.
-			Suspendisse lectus quam, rhoncus non vulputate sit amet, finibus quis
-			justo. Fusce a enim lectus. Vivamus quis dapibus tortor. Maecenas
-			egestas non velit non ultrices. <b>Nam cursus, nisl sit amet
-				molestie rhoncus, quam nibh lobortis libero, sit amet sodales libero
-				enim in tellus.<br/>
+			Nelle nostre sale potrete trovare i pi&ugrave; <b>importanti successi del
+			momento, ma anche i grandi classici del passato</b>, che proponiamo a cadenza
+			settimale. La nostra offerta comprende non solo film italiani e statunitensi,
+			ma anche del cinema francese, tedesco e giapponese; in generale abbiamo a
+			cuore che i film che proponiamo siano quanto pi&ugrave; possibile <b>internazionali
+			e diversificati</b>. A rendere l'esperienza ancora pi&ugrave; piacevole per il
+			nostro pubblico &egrave; il nostro personale altamente qualificato e <b>disponibile
+			ad soddisfare ogni vostra esigenza</b>, in modo che possiamo tornare da noi di nuovo.
+			Infine, i nostri prezzi sono accessibili e vantaggiosi comparati alla qualit&agrave;
+			del nostro servizio.
+				<br/>
 			Quindi ...</b>
 		</p>
 
