--- a/src/main/resources/static/spettacoli.css
+++ b/src/main/resources/static/spettacoli.css
@@ -11,19 +11,7 @@ li:hover{
   background-color: azure;
 }
 
-li button {
-	margin-left: 40vw;
-}
 
-.azione {
-  margin-left: 7%;
-  margin-right: 7%;
-}
-
-
-.row{
-	display: flex;
-	margin-right: 7%;
-	gap:35vw;
-	
+.expand {
+	flex-grow: 1;
 }
