--- a/src/main/resources/templates/films.html
+++ b/src/main/resources/templates/films.html
@@ -23,13 +23,15 @@
 	<header th:replace="fragments/layout.html :: navbar"></header>
 	<div class="space-container">
 		<div id="flexBody">
-			<div class="row bottom-border">
-				<div class="title">I FILM IN PROGRAMMA</div>
-				<div th:if="${amministratoreLoggato}">
-					<form th:action="@{/film/Form}" method="get">
-						<button class="btn btn-primary our-button" type="submit">+
-							Aggiungi</button>
-					</form>
+			<div class="bottom-border">
+				<div class="title">
+					I FILM IN PROGRAMMA
+					<div th:if="${amministratoreLoggato}">
+						<form th:action="@{/film/Form}" method="get">
+							<button class="btn btn-primary our-button" type="submit">+
+								Aggiungi</button>
+						</form>
+					</div>
 				</div>
 			</div>
 			<div class="elementoLista" th:each="film : ${films}">
